--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
     "react-router-dom": "^7.9.1",
     "rss-parser": "^3.13.0",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^3.3.5",
     "vite": "^7.1.2"
   }
 }
