--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "server": "node --experimental-modules server/index.js",
+    "start": "npm run build && npm run server"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -29,7 +34,6 @@
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "react-router-dom": "^7.9.1",
-    "rss-parser": "^3.13.0",
     "tailwindcss": "^3.3.5",
     "vite": "^7.1.2"
   }
