--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "server": "node --experimental-modules server/index.js",
-    "start": "npm run build && npm run server"
+    "start": "npm run build && npm run server",
+    "netlify-build": "vite build"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.3",
+    "express": "^4.21.2",
     "node-fetch": "^3.3.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "sanitize-html": "^2.12.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
